# fipc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ciede2000.cpp  cli.cpp  convert.cpp  generate_headers.sh  image.cpp  main.cpp  palette.cpp
include/: ciede2000.hpp  cli.hpp  convert.hpp  image.hpp  palette.hpp  palettes_map.h
include/palettes/: catppuccin.h  dracula.h  edge.h  gruvbox.h  gruvbox_material.h  nord.h  rose_pine.h  solarized.h  sonokai.h  tokyo_night.h
palettes/: catpuccin.json  dracula.json  edge.json  gruvbox.json  gruvbox_material.json  nord.json  rose_pine.json  solarized.json  sonokai.json  tokyo_night.json
src/: cli.cpp  convert.cpp  main.cpp  palette.cpp
